tests/NormalTests/paczka1/small_fuzzy/12040832.err
Error in line 6: ZOasGl61GAt S98 2,5
Error in line 9: tAEKyma S98 98,6
